--- a/public/main.css
+++ b/public/main.css
@@ -14,6 +14,7 @@
   #root {
     max-width: 1200px;
     margin: 0 auto;
+    text-align: center
   }
   
   h1 {
@@ -34,6 +35,14 @@
   p {
     padding: 0 2.5rem 2.5rem;
     margin: 0;
+  }
+
+  .commentButton{
+    margin-bottom: 50px;
+    height: 25px;
+    color:white;
+    border-radius: 5px;
+    background-color: lightblue
   }
   
   .container {
