--- a/views/main.css
+++ b/views/main.css
@@ -39,7 +39,21 @@
     padding: 0 2.5rem 2.5rem;
     margin: 0;
   }
+
+  .commentSection{
+    text-align:center
+  }
   
+
+  .commentButton{
+    margin-bottom: 50px;
+    height: 25px;
+    color:white;
+    border-radius: 5px;
+    background-color: lightblue
+  }
+
+ 
   .container {
     display: flex;
     flex-wrap: wrap;
@@ -57,6 +71,11 @@
   .card:hover {
     box-shadow: 2px 8px 45px rgba(0, 0, 0, .15);
     transform: translate3D(0, -2px, 0);
+  }
+
+  .comment {
+    margin-right: 25px;
+    width: 75%
   }
   
   @media screen and (min-width: 600px) {
