Added commenting functionality

--- a/views/index.pug
+++ b/views/index.pug
@@ -14,7 +14,7 @@ html
         p= comments[i].content
       
       form.commentSection
-        input.comment
+        input#commentInput.comment
         button.commentButton Click to Comment!
       script
         include script.js
